# Ising-Model

./: .gitignore  LICENSE  README.md  ising_times.csv  ising_times_clean_python.csv  ising_times_new.csv  ising_times_numba.csv  metrics.ipynb  partition_plus_sm.py  pyproject.toml  sequential.py  test_script.sh  visualisation.ipynb
notebooks/: metrics.ipynb  visualisation.ipynb
src/: .gitignore  generate_animation.ipynb  partition_plus_sm.py  random_solver.py  sequential.py
