[project]
name = "ising-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mpi4py>=4.1.1",
    "natsort>=8.4.0",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "seaborn>=0.13.2",
]
